--- a/index.html
+++ b/index.html
@@ -6,31 +6,28 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:ital@1&family=Vollkorn&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&family=Vollkorn&display=swap" rel="stylesheet">
 
         <meta name="viewport" content="width=device-width">
         <script src="script.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
   </head>
-<body class="bodywhite">
+<body>
     <div class="titledivider">
         <div><p class="title" onclick="autoscroll">In Praise of Shadows</p></div>
         <div><p class="titleshadow">In Praise of Shadows</p></div>
     </div>
     <div class="section2divider">
         <div><p class="s2text">Natural light is an important element in architecture that builds aesthetics, mood, and accessibility. We enhance a room manually with artificial lights, but nothing beats a well design natural light source</p></div>
-        <div><p></p></div>
+        <div><p class="s2shadow">Natural light is an important element in architecture that builds aesthetics, mood, and accessibility. We enhance a room manually with artificial lights, but nothing beats a well design natural light source</p></div>
     </div>
-    <a href="page1.html" class="divlight">
+    <a href="page1.html">
         <div><p class="light">
             Sculpting Shadows
         </p></div>
         <p class="lightglow">
             Sculpting Shadows
-        </p>
-        <p class="lightglow">
-            Sculpting Shadows
-        </p>
+        </p>    
         <p class="lightglow">
             Sculpting Shadows
         </p>
