--- a/page1.html
+++ b/page1.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-        <title>In Praise of Shadows</title>
-        <link rel="stylesheet" href="style.css" />
+        <title>In Praise of Shadows-1</title>
+        <link rel="stylesheet" href="style1.css" />
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:ital@1&family=Vollkorn&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&family=Vollkorn&display=swap" rel="stylesheet">
 
         <meta name="viewport" content="width=device-width">
         <script src="script.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
   </head>
   <body>
-        <div class="section2divider" id="jump">
-            <div><p class="s2text">Instead of using light, to design around natural light, we need to harness the shadows. It’s like a sculpture. We don’t add to light, but we subtract to shape it into what we want.</p></div>
-            <div><p></p></div>
-        </div>
+        <a>
+            <div><p class="light2">
+                Displaying Darkness
+            </p></div>
+            <p class="lightglow2">
+                Displaying Darkness
+            </p>    
+            <p class="lightglow2">
+                Displaying Darkness
+            </p>
+            <div class="section2divider2">
+                <div><a href="page2.html" class="s2text2">Instead of using light, to design around natural light, we need to harness the shadows. It’s like a sculpture. We don’t add to light, but we subtract to shape it into what we want.</a></div>
+                <div><a href="page2.html" class="s2shadow2">Instead of using light, to design around natural light, we need to harness the shadows. It’s like a sculpture. We don’t add to light, but we subtract to shape it into what we want.</a></div>
+            </div>
+        </a>
     </body>
 </html>
